@@ -1,5 +1,7 @@
 AUX configure.py.patch 1582 RMD160 f32260fa941070356a21fb98c749436c89f9ea71 SHA1 7dc0aa5d30ad15c43e4e303d1f26735e710a4d26 SHA256 dbd98df4abb88791f45cd5a896ab2d0fadd6f77935d37d318f8ef05f984b313d
+DIST PyQt-x11-gpl-4.5.4.tar.gz 6970552 RMD160 0f7a48edb65116c8fb23357f66d164ff1fe48684 SHA1 be8b01b8b2343a6a85f18d16f10bc549e88265d6 SHA256 b3d06c7bda701055769add93b48103ee35c6fc9a4b00c67599cb426f9efda5a8
 DIST PyQt-x11-gpl-4.5.5-snapshot-20090730.tar.gz 6843141 RMD160 2bc3c78c18afc62c678baea718a8205f906cff42 SHA1 3fb08ca605d885d085056d2776f2b64f27017cb3 SHA256 659605ad19686b860eb23857459bd6142dd30afc4ffa05a2295b0e119f44591c
+EBUILD PyQt4-4.5.4-r1.ebuild 3873 RMD160 51144772fb7886a674187266ed57095120da0bfb SHA1 97a3d6709d8c28b0286910e071abbeb7e4a2a86e SHA256 2af0a567a73f4d90db460cccf04c9d91806b1958a715601fad46acce2d672525
 EBUILD PyQt4-4.5.5_pre20090730.ebuild 4054 RMD160 bf393578dab9815dfa23bd1a7ea41b0ed1a29607 SHA1 093df9f2f9f7aebef4db254eb118a5fa666a84f1 SHA256 5ea5151234d39a16e3432a6254627cd1d42d927ea3ba856457f375708a681873
-MISC ChangeLog 8354 RMD160 1761571812d335bf8b9f63b4f55cbc0d19908818 SHA1 52da3bfdf820effb59d9ce7f580ce99778784202 SHA256 dfc189a09f651adfa8b253a519593d87936791b0ecb43a91c3459d6a9ffc5a53
+MISC ChangeLog 8519 RMD160 d2f4e2200d79e4ff7f20a460ba1e5e07d5cc14f8 SHA1 1c6ab6f4aeb77002fd2b082fb3f986f70f72e16b SHA256 8f28394098eb50653b7a70dfd89d246ca9b90c96724e71a963f54caea7e5b11e
 MISC metadata.xml 642 RMD160 0a9271db6e18561fdd834d054186fbb0445fc19b SHA1 27ab2a924dff45be4cef4efaa01a67bbe3bff2c7 SHA256 002a5a6bb12da2ef8b9e7b22541922ff4e92d7c1ae1d82c29bbd2c6c7faeb91c
