@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*PyQt4-4.5.4-r1 (04 Aug 2009)
+
+  04 Aug 2009; Markos Chandras <hwoarang@gentoo.org> +PyQt4-4.5.4-r1.ebuild:
+  Fix portage ebuild according to Davide's improvements
+
   04 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
   PyQt4-4.5.5_pre20090730.ebuild:
   Install full html documentation ( bug #280055 )
